<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/logoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <!--background_logo_resized-->


    <!-- <fr.castorflex.android.circularprogressbar.CircularProgressBar
          android:id="@+id/progressbar_circular"
          android:layout_width="42dp"
          android:layout_height="42dp"
          android:layout_marginBottom="8dp"
          android:layout_marginLeft="4dp"
          android:layout_marginRight="8dp"
          android:layout_marginTop="8dp"
          android:indeterminate="true"
          android:layout_centerInParent="true"
          android:indeterminateOnly="false"
          app:cpb_colors="@array/gplus_colors" />-->


    <LinearLayout

        android:id="@+id/MainLayoutcardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/forgotpwd_dialogbox"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/mainLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/loc_imageView"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/transport_icon" />


            <TextView
                android:id="@+id/login_image_text"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loc_imageView"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/type_of_transport"
                android:textColor="@color/dark_text"
                android:textSize="18sp" />
            <!-- android:layout_centerInParent="true"-->
            <!--android:layout_alignParentLeft="true"-->

        </LinearLayout>


        <RelativeLayout

            android:id="@+id/mainRelative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainLinear"
            android:layout_marginBottom="30dp">

            <Button
                android:id="@+id/pickup_button"

                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/password"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_buton"
                android:ellipsize="start"
                android:padding="10dp"
                android:text="@string/pickup_text"
                android:textAllCaps="false"
                android:textColor="@color/button_text_color"
                android:textStyle="bold" />

            <Button
                android:id="@+id/drop_button"

                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/pickup_button"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_buton"
                android:ellipsize="start"
                android:padding="10dp"
                android:text="@string/drop_text"
                android:textAllCaps="false"
                android:textColor="@color/button_text_color"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--android:indeterminate="true"
        android:indeterminateOnly="false"-->
    </RelativeLayout>


</RelativeLayout>